Updated by task 'AutomatedMDTask_1686100259212_TM-MT_1686100297460'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/d2d0ee4bd6c710717423a8f8e30f42852654bdc8

--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: September 2020
 author: mfrei
 exl-id: e652b5bf-d209-4eeb-89fc-af584939d5c5
-source-git-commit: d397fe8a435cf411147e773ee11c34c29ecf7f5b
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '6568'
-ht-degree: 100%
+source-wordcount: '6502'
+ht-degree: 98%
 
 ---
 
@@ -77,8 +77,7 @@ Adobe Experience Platform 現有功能更新：
 | 2020 年 8 月 17 日 | [對 Launch 實作除錯](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/debug-launch-implementation.html) | 影片 | 介紹 Launch 實作除錯所需的幾項工具和技巧。了解如何使用瀏覽器的開發人員主控台和 Experience Platform Debugger 擴充功能，識別及疑難排解 Launch 實作的重大問題。 |
 | 2020 年 8 月 17 日 | [建立 Launch Cloud Service 設定](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/create-launch-cloud-service.html) | 影片 | 了解如何建立新的 Launch Cloud Services 設定。Launch Cloud Service 設定隨後可套用至現有的 Site，在「作者」和「發佈」環境中都能看見系統載入 Launch 資料庫。 |
 | 2020 年 8 月 17 日 | [使用 Adobe I/O 連線 AEM 與 Launch](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/connect-aem-launch-adobe-io.html) | 影片 | 了解如何使用 Adobe I/O 建立 IMS 設定，以便使用 Launch API 驗證 AEM。整合完成後，AEM 將可透過 Launch API 通訊，存取 Launch 屬性。 |
-| 2020 年 8 月 17 日 | [同意書管理 - Google IAB TCF 2.0 支援](https://experienceleague.adobe.com/docs/platform-learn/tutorials/rtcdp/integrate-with-iab-transparency-and-consent-framework-2.html) | 影片 | 影片示範 Adobe 的即時客戶資料平台能如何協助品牌在消費者參與數位內容時，依其同意的事項提供服務。透過支援 IAB 透明與同意架構 2.0，品牌得以在與消費者互動時享有更大彈性，同時賦予消費者更多同意與否的控制權。 |
-| 2020 年 8 月 17 日 | [Google Customer Match](https://experienceleague.adobe.com/docs/platform-learn/tutorials/rtcdp/integrate-with-google-customer-match.html) | 影片 | 影片示範 Adobe 的即時 CDP 和 Google 的 Customer Match 功能可如何協助品牌在 Google 擁有及運作的內容中與客戶互動，配合業務目標提升其宣傳成效。 |
+| 2020 年 8 月 17 日 | [Google Customer Match](https://experienceleague.adobe.com/docs/platform-learn/tutorials/rtcdp/integrate-with-google-customer-match.html) | 影片 | 此影片說明Adobe的Real-Time CDP和Google的Customer Match功能如何協助品牌在Google擁有和運營的屬性上與客戶互動，配合業務目標提升其宣傳成效。 |
 | 2020 年 8 月 17 日 | [資料工程師專用 Adobe Experience Platform 快速入門課程簡介](https://video.tv.adobe.com/v/39478) | 影片 | [資料工程師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.2)課程的簡介影片。 |
 | 2020 年 8 月 17 日 | [資料工程師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.2) | 課程 | 了解如何在 Adobe Experience Platform 中完成資料工程師的主要職務。此入門課程利用影片和實作練習，協助您開始使用 Web SDK 擷取批次資料和串流資料，以及執行查詢等各項作業。 |
 | 2020 年 8 月 17 日 | [資料架構師專用 Adobe Experience Platform 快速入門課程簡介](https://video.tv.adobe.com/v/39477) | 影片 | 影片提供[資料架構師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.1)課程概述。 |
@@ -142,7 +141,7 @@ Adobe Experience Platform 現有功能更新：
 
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
-* 修正無法以「未指定」維度篩選[!UICONTROL 工作區]資料欄的問題。(AN-222393)
+* 修正無法篩選的問題 [!UICONTROL Workspace] 欄的「未指定」維度。 (AN-222393)
 * 修正[!UICONTROL 排程專案]無法傳送的連線逾時問題。(AN-223916)
 * 修正[!UICONTROL 虛擬報表套裝]中，[!UICONTROL 「造訪」]區段無法正常運作的問題。(AN-225719)
 * 修正 Adobe Report Builder 中的 Chrome 瀏覽器版本問題。(AN-226718)
@@ -411,7 +410,7 @@ Adobe Advertising Cloud 發行說明。
 
 | 功能 | 說明 |
 | -----------| ---------- |
-| 延長互動式影片前置內容的時間，加入 VAST 詳細目錄支援 | 現在，每個互動式影片前置內容版位和廣告均可支援 VPAID 和 VAST 詳細目錄。**注意：**&#x200B;如果您的主要 KPI 是檢視功能，請繼續建立個別的 VPAID 和 VAST 版位和廣告，因為可視度曝光率不適用於 VAST 廣告。 |
+| 延長互動式影片前置內容的時間，加入 VAST 詳細目錄支援 | 現在，每個互動式影片前置內容版位和廣告均可支援 VPAID 和 VAST 詳細目錄。**注意：** 如果您的主要KPI是檢視功能，請繼續建立個別的VPAID和VAST版位和廣告，因為可視度曝光率不適用於VAST廣告。 |
 
 ### [!UICONTROL Advertising Cloud Search] 新功能 {#adcloud-search}
 
