--- a/c-legacy-releases/2022/05182022.md
+++ b/c-legacy-releases/2022/05182022.md
@@ -6,9 +6,9 @@ last-update: May 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: c25cdfc7-0e06-4179-867b-e5edd9e1b919
-source-git-commit: f6251272499da093da8df35fe7075ae0f9fcb557
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '5037'
+source-wordcount: '4999'
 ht-degree: 100%
 
 ---
@@ -114,7 +114,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 ### [!DNL Adobe Mobile] SDK
 
-如需瞭解 Adobe Experience Platform Mobile SDK，請參閱[版本注意事項和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+如需瞭解 Adobe Experience Platform Mobile SDK，請參閱[版本注意事項和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
@@ -278,7 +278,6 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 | -----------| ---------- | ---------- | ---------- | ------|
 | 2022 年 5 月 | [AEM as a Cloud Service 2021.4.0 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/2021/2021-4-0.html?lang=tw) | 影片 | 從 AEM 產品團隊獲得消息，了解關於 Adobe Experience Manager 最新版本的功能和創新內容。 | AEM Asset Essentials、Sites、Screens、Forms 和 Cloud Foundation |
 | 2022 年 5 月 | [Cloud 5 AEM](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/cloud-5/cloud5-introduction.html) | 影片 | 在 5 分鐘內的短片中，獲得有關 AEM as a Cloud Service 的所有實用資訊。從第 1 季開始觀看。 | AEM CS |
-| 2022 年 5 月 | [取得整合的登入權杖](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/cloud-5/cloud5-getting-login-token-integrations.html) | 影片 | 有關如何取得 Cloud Service 整合的登入權杖的深入指南，以及用於此操作的一些使用案例。 | AEM CS |
 | 2022 年 5 月 | [在浮動切換中顯示多個 pdf 文件](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/document-services/display-pdf-in-carousel.html?lang=tw) | 影片 | 了解在提交表單之前將多個 PDF 文件顯示到表單填寫工具以供審核的常用案例。 | AEM Forms |
 | 2022 年 5 月 | [影像與 AEM Headless](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/graphql/how-to/images.html) | 影片 | 了解如何利用影像開發豐富、極具吸引力的 AEM Headless 體驗等。 | AEM Headless |
 | 2022 年 5 月 | [RTF 文字與 AEM Headless](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/graphql/how-to/localized-content.html) | 影片 | 了解如何使用多行文字欄位，一種可讓作者建立 RTF 文字內容的「內容片段」資料類型。 | AEM Headless |
