--- a/c-legacy-releases/2022/06152022.md
+++ b/c-legacy-releases/2022/06152022.md
@@ -6,9 +6,9 @@ last-update: June 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: bcc6313b-e6c0-4916-b1b9-cf3002851caf
-source-git-commit: f6251272499da093da8df35fe7075ae0f9fcb557
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '4353'
+source-wordcount: '4354'
 ht-degree: 100%
 
 ---
@@ -111,7 +111,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 ### [!DNL Adobe Mobile] SDK
 
-如需瞭解 Adobe Experience Platform Mobile SDK，請參閱[版本注意事項和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+如需瞭解 Adobe Experience Platform Mobile SDK，請參閱[版本注意事項和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
