--- a/c-legacy-releases/2022/09072022.md
+++ b/c-legacy-releases/2022/09072022.md
@@ -6,9 +6,9 @@ last-update: September 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: d195f05f-454f-4ef0-ba30-0453868fe426
-source-git-commit: f6251272499da093da8df35fe7075ae0f9fcb557
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '6486'
+source-wordcount: '6274'
 ht-degree: 100%
 
 ---
@@ -99,7 +99,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 ### [!DNL Adobe Mobile] SDK
 
-更新日期：**2022 年 9 月 1 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[版本注意事項和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+更新日期：**2022 年 9 月 1 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[版本注意事項和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
@@ -501,11 +501,6 @@ Last updated: **August 9, 2022**
 
 | 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| 2022 年 9 月 | [註冊開發人員帳戶](https://experienceleague.adobe.com/docs/document-services/tutorials/acrobatsign/sign-up-developer-account.html?lang=zh-Hant) | 影片 | 在 _Acrobat Sign 內嵌快速入門指南_&#x200B;的第 1 部分中，了解如何註冊 Acrobat Sign API 開發人員帳戶。您的新開發人員帳戶已完整啟用簽署和 API 功能。 | 文件服務 |
-| 2022 年 9 月 | [建立您的應用程式](https://experienceleague.adobe.com/docs/document-services/tutorials/acrobatsign/creating-your-application.html?lang=zh-Hant) | 影片 | 在 _Acrobat Sign 內嵌快速入門指南_&#x200B;的第 2 部分中，了解如何使用 Acrobat Sign API 建立應用程式。 | 文件服務 |
-| 2022 年 9 月 | [建立內嵌連結](https://experienceleague.adobe.com/docs/document-services/tutorials/acrobatsign/creating-an-embed-link.html?lang=zh-Hant) | 影片 | 在 _Acrobat Sign 內嵌快速入門指南_&#x200B;的第 3 部分中，了解如何為 OAuth 建立內嵌連結。您的應用程式將使用此 OAuth 方法為使用者取得權限。 | 文件服務 |
-| 2022 年 9 月 | [產生存取權杖](https://experienceleague.adobe.com/docs/document-services/tutorials/acrobatsign/generating-an-access-token.html?lang=zh-Hant) | 影片 | 在 _Acrobat Sign 內嵌快速入門指南_&#x200B;的第 4 部分中，了解如何產生可與 Acrobat Sign API 一起使用的存取權杖。 | 文件服務 |
-| 2022 年 9 月 | [建立暫時性文件](https://experienceleague.adobe.com/docs/document-services/tutorials/acrobatsign/creating-a-transient-document.html?lang=zh-Hant) | 影片 | 在 _Acrobat Sign 內嵌快速入門指南_&#x200B;的第 5 部分中，了解如何建立暫時性文件。 | 文件服務 |
 | 2022 年 9 月 | [自動調整版面](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/auto-adjust-layout.html?lang=zh-Hant) | 影片 | 了解新的編輯模式，其可在 PDF 中跨頁面重新安排內容並自動調整版面。 | Acrobat |
 | 2022 年 9 月 | [新增自訂頁面](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/add-custom-page.html) | 影片 | 了解如何使用整合 Adobe Express 應用程式將自訂頁面新增到您的 PDF 中，該應用程式提供了數千個範本供您選擇。 | Acrobat |
 | 2022 年 9 月 | [修改現有的 Web 表單](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/advanced-tasks/advanced-tasks-managing/modify-webform.html?lang=zh-Hant) | 影片 | 了解如何停用、編輯和重新啟用現有的 Web 表單。 | Acrobat Sign |
