--- a/c-legacy-releases/2022/10052022.md
+++ b/c-legacy-releases/2022/10052022.md
@@ -6,9 +6,9 @@ last-update: October 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: 63424213-0589-47ea-865f-47ba17e97b85
-source-git-commit: f6251272499da093da8df35fe7075ae0f9fcb557
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '6576'
+source-wordcount: '6577'
 ht-degree: 99%
 
 ---
@@ -106,7 +106,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 ### [!DNL Adobe Mobile] SDK
 
-更新日期：**2022 年 9 月 9 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[版本注意事項和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+更新日期：**2022 年 9 月 9 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[版本注意事項和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
