--- a/c-legacy-releases/2023/02082023.md
+++ b/c-legacy-releases/2023/02082023.md
@@ -6,9 +6,9 @@ last-update: February 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: aa3b87a4-1d1d-4820-aaa6-09b0046039af
-source-git-commit: a6e719eb074f358b38ba6e99fd0c78a3b44c1c56
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '5037'
+source-wordcount: '5038'
 ht-degree: 100%
 
 ---
@@ -112,7 +112,7 @@ _在 2 月未更新_
 
 ### [!DNL Mobile] SDK
 
-更新日期：**2022 年 10 月 19 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[發行說明和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+更新日期：**2022 年 10 月 19 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[發行說明和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Analytics] {#analytics}
 
