--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -6,7 +6,7 @@ last-update: March 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: bff918b2-1f21-4375-af54-312347de0b2f
-source-git-commit: d04a529ee7142df7e003c0c9d74d4ee3741dcedc
+source-git-commit: b3a50c4144f9eb3f8587c0db4975f6162956470e
 workflow-type: tm+mt
 source-wordcount: '4667'
 ht-degree: 100%
@@ -16,8 +16,6 @@ ht-degree: 100%
 # Experience Cloud 版本注意事項 - 2023 年 3 月
 
 ![橫幅](assets/release-notes-header.png)
-
-## 2023 年 3 月
 
 此頁面可幫助您隨時掌握 Experience League 的產品發行資訊、活動和學習機會。
 
@@ -156,7 +154,7 @@ _在 3 月未更新。_
 
 ### [!DNL Mobile] SDK
 
-已更新：**2022 年 11 月 11 日**- 請查看 [!DNL Adobe Experience Platform][!DNL Mobile SDKs] [發行說明和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+已更新：**2022 年 11 月 11 日**- 請查看 [!DNL Adobe Experience Platform][!DNL Mobile SDKs] [發行說明和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 +++
 
