--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -5,7 +5,7 @@ doc-type: release notes
 last-update: April 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 264ad6eeeb05af620941cd57ceaf18c82faf019e
+source-git-commit: b3a50c4144f9eb3f8587c0db4975f6162956470e
 workflow-type: tm+mt
 source-wordcount: '5766'
 ht-degree: 100%
@@ -15,8 +15,6 @@ ht-degree: 100%
 # Experience Cloud 發行說明 - 2023 年 4 月
 
 ![橫幅](assets/release-notes-header.png)
-
-## 2023 年 4 月
 
 此頁面可幫助您隨時掌握 Experience League 的產品發行資訊、活動和學習機會。
 
@@ -157,7 +155,7 @@ _在 4 月未更新。_
 
 ### [!DNL Mobile] SDK
 
-已更新：**2022 年 11 月 11 日**- 請查看 [!DNL Adobe Experience Platform][!DNL Mobile SDKs] [發行說明和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+已更新：**2022 年 11 月 11 日**- 請查看 [!DNL Adobe Experience Platform][!DNL Mobile SDKs] [發行說明和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 +++
 
