--- a/c-legacy-releases/2021/10282021.md
+++ b/c-legacy-releases/2021/10282021.md
@@ -6,9 +6,9 @@ last-update: November 2021
 author: mfrei
 mini-toc-levels: 1
 exl-id: 0c22cff0-c2a7-4761-9ac9-faee074d868e
-source-git-commit: f6251272499da093da8df35fe7075ae0f9fcb557
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '4852'
+source-wordcount: '4853'
 ht-degree: 100%
 
 ---
@@ -136,7 +136,7 @@ ht-degree: 100%
 
 ### Adobe Mobile SDK
 
-如需了解 Adobe Experience Platform Mobile SDK，請參閱[版本注意事項和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+如需了解 Adobe Experience Platform Mobile SDK，請參閱[版本注意事項和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
