--- a/c-legacy-releases/2022/10282022.md
+++ b/c-legacy-releases/2022/10282022.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: November 2022
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: f6251272499da093da8df35fe7075ae0f9fcb557
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '4952'
+source-wordcount: '4953'
 ht-degree: 100%
 
 ---
@@ -103,7 +103,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 ### [!DNL Adobe Mobile] SDK
 
-更新日期：**2022 年 10 月 19 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[發行說明和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+更新日期：**2022 年 10 月 19 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[發行說明和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
