--- a/c-legacy-releases/2023/01112023.md
+++ b/c-legacy-releases/2023/01112023.md
@@ -6,9 +6,9 @@ last-update: January 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: 22e2e4b0-b76a-429e-be83-b8a3c9f6e455
-source-git-commit: d3cadefbfc28edbc62fd90cb49991c9837744e5e
+source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
 workflow-type: tm+mt
-source-wordcount: '5135'
+source-wordcount: '5136'
 ht-degree: 100%
 
 ---
@@ -94,7 +94,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.
 
 ### [!DNL Adobe Mobile] SDK
 
-更新日期：**2022 年 10 月 19 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[發行說明和變更記錄](https://aep-sdks.gitbook.io/docs/release-notes)。
+更新日期：**2022 年 10 月 19 日** - 請參閱 Adobe Experience Platform Mobile SDK 的[發行說明和變更記錄](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
