--- a/c-legacy-releases/2021/07222021.md
+++ b/c-legacy-releases/2021/07222021.md
@@ -6,9 +6,9 @@ last-update: July 2021
 author: mfrei
 mini-toc-levels: 1
 exl-id: 02a30ea2-3f2f-4b7d-85c0-84116a9833ee
-source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
+source-git-commit: 6bf066b021340d776ac0a48197f968e1c9ef7391
 workflow-type: tm+mt
-source-wordcount: '4922'
+source-wordcount: '4907'
 ht-degree: 93%
 
 ---
@@ -181,7 +181,7 @@ AN-160022、AN-186365、AN-234768 (CJA)、AN-253041、AN-255098、AN-256319、AN
 
 | 注意 | 新增或更新日期 | 說明 |
 | ----------- | ---------- | ---------- |
-| Adobe Data Connectors 終止服務 | 2021 年 8 月 3 日 | Adobe [!UICONTROL Data Connectors] 的舊技術已無法使用或不再支援。[Adobe Exchange 合作夥伴計劃](http://partners.adobe.com/technologyprogram/experiencecloud.html)中有提供新的標準。您可以針對任何整合使用該項標準，以繼續獲得產品供應和支援。生命週期結束的官方日期為 **2021 年 8 月 19 日**。 [了解更多...](https://experienceleague.adobe.com/docs/analytics/import/dataconnectors/data-connectors-eol.html?lang=zh-Hant) |
+| Adobe Data Connectors 終止服務 | 2021 年 8 月 3 日 | Adobe [!UICONTROL Data Connectors] 的舊技術已無法使用或不再支援。您可以針對任何整合使用該項標準，以繼續獲得產品供應和支援。生命週期結束的官方日期為 **2021 年 8 月 19 日**。 [了解更多...](https://experienceleague.adobe.com/docs/analytics/import/dataconnectors/data-connectors-eol.html?lang=zh-Hant) |
 | 三個 Analytics API 服務結束生命週期 | 2021 年 7 月 15 日 | 下列 Analytics Legacy API 服務將在 **2021 年 8 月 18 日**&#x200B;結束生命週期並關閉。 所有目前使用這些服務建立的整合功能將於當天停止運作。<ul><li>1.3 Analytics API</li><li>1.4 SOAP Analytics API</li><li>Legacy OAuth 驗證 (OAuth 和 JWT)</li></ul>Adobe 提供了[舊版 API 生命週期結束常見問答](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md?mv=email)來回答您的問題，並指引您展開後續操作。 採用這些服務的 API 整合應用可移轉為 [1.4 Analytics REST API](https://github.com/AdobeDocs/analytics-1.4-apis?mv=email) 或 [2.0 Analytics API](https://github.com/AdobeDocs/analytics-2.0-apis?mv=email)。Legacy OAuth 帳戶可移轉為 [Adobe I/O](https://developer.adobe.com/console/home？mv=email) Analytics 整合帳戶，藉以存取 1.4 Analytics API 和 2.0 Analytics API。 |
 | 完整處理資料來源的生命週期結束 | 2021 年 4 月 12 日 | Adobe 計劃在 **2021 年 7 月 31 日**&#x200B;淘汰完整處理資料來源。 自 2021 年 3 月 25 日起，將無法再建立此類型的新匯入。請利用[大量資料插入 API](https://developer.adobe.com/apis/experiencecloud/analytics/docs.html) 匯入此類資料。 |
 | [!UICONTROL Report Builder] 登入更新 | 2021 年 4 月 9 日 | 在 2021 年 1 月 14 日，[!UICONTROL Report Builder] 登入更新淘汰對舊版技術的相依性，並使登入程序符合 Experience Cloud。Experience Cloud 會使用您的 Enterprise ID (電子郵件和密碼)。 為確保對 [!UICONTROL Report Builder] 的存取不中斷，請於 **2021 年 7 月 22 日**&#x200B;前將 [!UICONTROL Report Builder] 增益集更新至 5.6.47 版或更新版本。 Report Builder 5.6.47 版或更新版本只支援 Experience Cloud 登入，不支援單一登入。 |
