Updated by task 'AutomatedMDTask_1686346510220_TM-MT_1686346549931'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/8e8095305ba9034a81e6efbad6b188d19be83d0e

--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: September 2020
 author: mfrei
 exl-id: e652b5bf-d209-4eeb-89fc-af584939d5c5
-source-git-commit: 204eeddddd9b8eadb1cf400079f074c861f06e1f
+source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
 workflow-type: tm+mt
-source-wordcount: '6502'
+source-wordcount: '6494'
 ht-degree: 98%
 
 ---
@@ -37,7 +37,7 @@ ht-degree: 98%
 * [Experience Manager](#aem)
 * [Campaign](#ac)
 * [Advertising Cloud](#adcloud)
-* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=zh-Hant)
+* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html)
 * [[!DNL Magento]](#magento)
 * [[!DNL Marketo Engage]](#marketo)
 * [[!DNL Primetime]](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)
@@ -137,7 +137,7 @@ Adobe Experience Platform 現有功能更新：
 
 | 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) - 目標日期 | 說明 |
 | ----------- | ---------- | ---------- |
-| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/panels/media-concurrent-viewers.html?lang=en) |
+| [!UICONTROL 工作區]的[!UICONTROL 「媒體同時檢閱者」]面板 | 2020 年 9 月 17 日 | [!UICONTROL 「媒體同時檢閱者」]面板可供您掌握何時最多人同時觀看媒體，以及趨勢反轉的時間。這項功能提供內容品質和檢視者互動的重要分析，有助於疑難排解或依數量/規模完成規劃。[深入了解...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/panels/media-concurrent-viewers.html) |
 
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
@@ -250,7 +250,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 
 * **[!UICONTROL AEM as a Cloud Service]**
 
-   [!UICONTROL AEM as a Cloud Service ]新增了哪些功能？精選重點包括：
+  [!UICONTROL AEM as a Cloud Service ]新增了哪些功能？精選重點包括：
 
    * [!UICONTROL AEM as a Cloud Service]可讓您[將頁面和子頁面 (頁面樹狀結構) 還原為舊版](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/sites/authoring/features/page-versions.html#reinstating-versions)。
    * 現支援透過資產微服務將影片轉碼，且[!UICONTROL 「處理設定檔」]畫面中新增[!UICONTROL 「視訊」]區段，支援視訊位元速率和維度設定 (輸出格式為使用 H.264 轉碼器的 MP4)。如需詳細資訊，請參閱[管理視訊資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/assets/manage/manage-video-assets.html#transcode-video)。如需更多轉碼選項及傳送更多視訊，可使用 [!UICONTROL Dynamic Media] 附加元件。
@@ -271,14 +271,14 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 
 * **Experience Manager [!UICONTROL 桌面應用程式] 2.0.3.2**
 
-   此次要版本包含下列內容：
+  此次要版本包含下列內容：
    * 修正桌面應用程式 2.0.2 版無法在 Windows 上搭配 AEM 6.5.5 執行個體運作的問題。
    * 將支援的作業系統平台更新為 Win 10 (含最新的 Service Pack) 和 Mac OS 10.14 以上版本。
    * 請參閱[發行說明](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html)。
 
 * **[!UICONTROL AEM Assets Brand Portal]**
 
-   此版本包含下列內容：
+  此版本包含下列內容：
    * 改善文件檢視器的 PDF 檢視體驗。
    * 改善下載資產設定和體驗。
    * 修正產品重大問題。
@@ -294,17 +294,17 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 
 * **[!UICONTROL Dynamic Media]** 中的 CDN 失效
 
-   您現在可以在 [!UICONTROL Dynamic Media] 中傳送請求，讓 CDN 快取在數分鐘內過期。更新資產後，若希望這些變更能立即在您的網站上生效，這項功能即可派上用場。
+  您現在可以在 [!UICONTROL Dynamic Media] 中傳送請求，讓 CDN 快取在數分鐘內過期。更新資產後，若希望這些變更能立即在您的網站上生效，這項功能即可派上用場。
 
-   請參閱[透過 [!UICONTROL Dynamic Media] 使 CDN 快取失效](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/assets/dynamicmedia/invalidate-cdn-cache-dynamic-media.html)。
+  請參閱[透過 [!UICONTROL Dynamic Media] 使 CDN 快取失效](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/assets/dynamicmedia/invalidate-cdn-cache-dynamic-media.html)。
 
 * **發佈頁面的開啟和關閉時間**
 
-   使用[開啟和關閉時間](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/sites/authoring/fundamentals/page-properties.html#basic)發佈頁面時，請檢視「頁面屬性」的「基本」索引標籤，現在您可以[預先設定自動複寫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/operations/replication.html#on-and-off-times-trigger-configuration)。
+  使用[開啟和關閉時間](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/sites/authoring/fundamentals/page-properties.html#basic)發佈頁面時，請檢視「頁面屬性」的「基本」索引標籤，現在您可以[預先設定自動複寫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/operations/replication.html#on-and-off-times-trigger-configuration)。
 
 * **[!UICONTROL Core Components]**
 
-   [!UICONTROL Core Components] 2.11.0 提供 AMP 支援，連同[程式編寫文件](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/introduction.html)以及[開發人員詳細資訊和專案，均可從 GitHub 下載取得](https://github.com/adobe/aem-core-wcm-components)
+  [!UICONTROL Core Components] 2.11.0 提供 AMP 支援，連同[程式編寫文件](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/introduction.html)以及[開發人員詳細資訊和專案，均可從 GitHub 下載取得](https://github.com/adobe/aem-core-wcm-components)
 
 * **[!UICONTROL 表單]**
 
@@ -318,7 +318,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 
 * **Experience League 的最新 AEM 內容**
 
-   此為 Adobe 提供之數位體驗技術內容的官方來源。若需參閱完整清單，請前往[此處](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/m-p/377452#M27156)。
+  此為 Adobe 提供之數位體驗技術內容的官方來源。若需參閱完整清單，請前往[此處](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/m-p/377452#M27156)。
 
 ### 最新 Experience Manager 課程與教學課程
 
@@ -334,7 +334,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 | 2020 年 8 月 17 日 | [對 Launch 實作除錯](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/debug-launch-implementation.html) | 影片 | 介紹 Launch 實作除錯所需的幾項工具和技巧。了解如何使用瀏覽器的開發人員主控台和 [!UICONTROL Experience Platform Debugger] 擴充功能，識別及疑難排解 Experience Platform Launch 實作的重大問題。 |
 | 2020 年 8 月 17 日 | [建立 Launch Cloud Service 設定](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/create-launch-cloud-service.html) | 影片 | 了解如何建立新的 Experience Platform Launch Cloud Services 設定。Launch Cloud Service 設定隨後可套用至現有的 Site，在「作者」和「發佈」環境中都能看見系統載入 Launch 資料庫。 |
 | 2020 年 8 月 17 日 | [使用 Adobe I/O 連線 AEM 與 Launch](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/connect-aem-launch-adobe-io.html) | 影片 | 了解如何使用 Adobe I/O 建立 IMS 設定，以便使用 Experience Platform Launch API 驗證 AEM。整合完成後，AEM 將可透過 Launch API 通訊，存取 Launch 屬性。 |
-| 2020 年 8 月 17 日 | [建立 Launch 屬性](https://experienceleague.adobe.com/docs/launch-learn/implementing-in-websites-with-launch/configure-launch/launch.html?lang=en) | 影片 | 了解如何以設定其餘整合所需的最低設定，建立 Launch 屬性。使用者將能熟悉 Launch UI，並了解擴充功能、規則和發佈工作流程。 |
+| 2020 年 8 月 17 日 | [建立 Launch 屬性](https://experienceleague.adobe.com/docs/launch-learn/implementing-in-websites-with-launch/configure-launch/launch.html) | 影片 | 了解如何以設定其餘整合所需的最低設定，建立 Launch 屬性。使用者將能熟悉 Launch UI，並了解擴充功能、規則和發佈工作流程。 |
 | 2020 年 8 月 17 日 | [整合 Experience Platform Launch 和 AEM](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/overview.html) | 影片 | Experience Platform Launch 是 Adobe 的新一代標記管理平台，也是部署 Adobe Analytics、[!DNL Target]、Audience Manager 和其他解決方案的最佳方式。了解 Experience Platform Launch 的概要介紹，並熟悉建議的 Adobe Experience Manager 整合。 |
 | 2020 年 8 月 17 日 | [為管理員設定 AEM Assets](https://video.tv.adobe.com/v/37647) | 影片 | 管理員可觀看影片，了解如何設定 [!UICONTROL AEM Assets]。 |
 | 2020 年 8 月 17 日 | [使用表單資料模型預先填寫最適化表單](https://experienceleague.adobe.com/?recommended=ExperienceManager-D-1-2020.1.forms) | 課程 | 您可以使用現有的資料，預先填寫最適化表單的欄位。本課程可協助您了解如何使用表單資料模型的請求屬性，預先填寫欄位。 |
@@ -435,7 +435,7 @@ Adobe Advertising Cloud 發行說明。
 
 ### Marketo Engage 核心更新
 
-如需最新版本的資訊，請參閱 [!DNL Marketo] [發行說明](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)。
+如需最新版本的資訊，請參閱 [!DNL Marketo] [發行說明](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html)。
 
 ### 即將推出的功能
 
