Updated by task 'AutomatedMDTask_1686777345544_TM-MT_1686777348650'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/8e8095305ba9034a81e6efbad6b188d19be83d0e

--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -8,7 +8,7 @@ mini-toc-levels: 2
 source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
 workflow-type: tm+mt
 source-wordcount: '5457'
-ht-degree: 85%
+ht-degree: 92%
 
 ---
 
@@ -33,7 +33,7 @@ ht-degree: 85%
 * [[!DNL Experience League] 活動與最新訊息](#events) (**5 月 22 日**&#x200B;更新)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
-* [[!DNL Experience Cloud] 介面與管理](#ecloud) (已更新 **5月25日**)
+* [[!DNL Experience Cloud] 介面和管理](#ecloud) (更新日期：**5 月 25 日**)
 * [[!DNL Experience Platform]](#platform)
 * [[!DNL Real-Time Customer Data Platform]](#rtcdp)
 * [[!DNL Analytics]](#analytics)
@@ -72,15 +72,15 @@ ht-degree: 85%
 
 +++即將到來的活動
 
-* **[!DNL Workfront]** | _Connect：行銷與創意領域的管理員聊天_ | **6月6日下午3:00 （北美山區時區）** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,xDk-NFOQNUSCrwRemwbIYw,hTUwAaMesk-RUHhGMuTCKQ,xpzBbYDs1kKxAlpGmXT1JQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]**|_連接：行銷和創意方面的管理員閒談_|**6 月 6 日下午 3:00 (美國山區時間)** |[登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,xDk-NFOQNUSCrwRemwbIYw,hTUwAaMesk-RUHhGMuTCKQ,xpzBbYDs1kKxAlpGmXT1JQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Marketo Engage]** | _Marketo與Mochas — 客戶歷程管理：生命週期模式_ | **6月8日下午1:00 （東部時間）** | [註冊](https://register.gotowebinar.com/register/8576570459027384151)
+* **[!DNL Marketo Engage]**|_Marketo &amp; Mochas - 客戶歷程管理：生命週期模型_|**6 月 8 日下午 1:00 (美國東部時間)** |[登記](https://register.gotowebinar.com/register/8576570459027384151)
 
-* **[!DNL Workfront]** | _詢問專家：運用免費的Adobe Workfront + Creative Cloud整合_ | **6月8日上午10:30 （北美山區時間）** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,ueSOCVtFIkmna7wZj0qUpA,vIUNhWnBmkOH38v4q3nQ8A,VszLUMl3W0268EAiz1tQ_w?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]**|_諮詢專家：運用免費的 Adobe Workfront + Creative Cloud 整合服務_|**6 月 8 日上午 10:30 (美國山區時間)** |[登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,ueSOCVtFIkmna7wZj0qUpA,vIUNhWnBmkOH38v4q3nQ8A,VszLUMl3W0268EAiz1tQ_w?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Workfront]** | _連線： Workfront策略管理員聊天_ | **6月12日上午8:00 (CT)** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,In1kkaMFJ0Kkz4rHJ_FjWA,VULVBg2HWUWGxssI6bizyQ,zDPownyw9EGwqszZO1cshQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]** | _連接：Workfront 策略性管理員閒談_ | **6 月 12 日 @ 8:00 AM (美國中部時間)** | [登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,In1kkaMFJ0Kkz4rHJ_FjWA,VULVBg2HWUWGxssI6bizyQ,zDPownyw9EGwqszZO1cshQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Workfront]** | _詢問專家：Workfront中的資源管理（辦公時間）_ | **6月13日下午2:00 （北美山區時區）** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,f3xda2S9qUiQFiyPwkN8bw,X4tGbEP2nEaLWQC3N4UNng,9hWdr3sEFEe7-p-YB9u-yg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]**|_諮詢專家：Workfront 服務時間內的資源管理_|**6 月 13 日下午 2:00 (美國山區時間)** |[登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,f3xda2S9qUiQFiyPwkN8bw,X4tGbEP2nEaLWQC3N4UNng,9hWdr3sEFEe7-p-YB9u-yg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
 [深入了解...](https://experienceleague.adobe.com/events/)
 
@@ -120,9 +120,9 @@ ht-degree: 85%
 
 +++詳細資訊
 
-發行版本： **2023年5月25日**
+發行版本：**2023 年 5 月 25 日**
 
-* 更新說明功能表，加入Experience League教學課程影片、產品檔案和社群貼文的搜尋結果。 您可以以Experience League檢視結果。
+* 已更新「說明」選單，現包含 Experience League 教學影片、產品文件和同業貼文的搜尋結果。 您可在 Experience League 中檢視結果。
 
 如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象])。
 
@@ -142,7 +142,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 ### [!DNL Mobile] SDK
 
-另請參閱 [發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/) 的 [!DNL Adobe Experience Platform] [!DNL Mobile SDKs].
+參閱 [!DNL Adobe Experience Platform][!DNL Mobile SDKs] 的[發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)。
 
 +++
 
@@ -279,7 +279,7 @@ _新功能_
 _新功能_
 
 * 為 Dynamic Media 影片傳遞 (啟用 CMAF) 中的自適應串流推出的新通訊協定 (DASH - 基於 HTTP 的動態自適應串流) 支援：
-   * 自適應串流 (DASH/HLS) 可確保更好的一般使用者觀看影片體驗。
+   * 自適應串流 (DASH/HLS) 可確保更好的一般使用者觀看影片體驗.
    * DASH 是自適應影片串流的國際標準通訊協定，在業界被廣泛採用。
    * 在亞太和北美地區有提供；[由支援票證啟用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/video.html#enable-dash)。歐洲、中東和非洲地區即將提供。
 * 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖和自訂轉譯。這些檔案現在也支援智慧標記和智慧型裁切功能。
@@ -670,22 +670,22 @@ Last updated: **August 9, 2022**
 
 了解 Adobe Advertising 的最新功能。
 
-上次更新日期： **2023年5月30日**
+上次更新日期：**2023 年 5 月 30 日**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | （5月24日發行）您現在可以暫停或啟用行銷活動、套件和廣告。 您已經可以暫停並啟用版位。 |
+| [!UICONTROL 行銷活動] | (5 月 24 日發佈) 您現在可以暫停或啟動行銷活動、套件和廣告。 您已經可以暫停並啟動刊登。 |
 
 {style="table-layout:auto"}
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-上次更新日期： **2023年6月1日**
+上次更新日期：**2023 年 6 月 1 日**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動]， [!UICONTROL 報表]， [!UICONTROL 目標] | （開放Beta版；5月30日發佈）由追蹤的轉換 [!DNL Microsoft Advertising] 通用事件追蹤(UET)標籤是行銷活動管理檢視和報告中的新功能。 您也可以將這類轉換納入包含下列專案的投資組合目標中，以最佳化這類轉換： [!DNL Microsoft Advertising] 行銷活動。 |
-| [!UICONTROL 報表] | （開放Beta版；5月30日發佈）三個新的專業報告包含 [!DNL Microsoft Advertising] 廣告擴充功能： [!UICONTROL MSA廣告擴充功能詳細資料報表]， [!UICONTROL MSA廣告擴充功能依廣告的報表]、和 [!UICONTROL MSA廣告擴充功能（依關鍵字）報表]. |
+| [!UICONTROL 行銷活動]、[!UICONTROL 報告]、[!UICONTROL 目標] | (公開測試版：5 月 30 日發行) 行銷活動管理視圖和報告現在提供以[!DNL Microsoft Advertising]通用事件追蹤 (UET) 標記所追蹤的轉換事件。 您還可以將這些事件列入含有 [!DNL Microsoft Advertising] 行銷活動的專案組合目標來針對這些事件進行最佳化。 |
+| [!UICONTROL 報表] | (公開測試版：5 月 30 日發行) 三個全新專業報告包含 [!DNL Microsoft Advertising] 廣告附加資訊：[!UICONTROL MSA 廣告附加資訊詳細報告]、[!UICONTROL 廣告報告的 MSA 廣告附加資訊]和 [!UICONTROL 按關鍵字報告的 MSA 廣告附加資訊]等需要的資料。 |
 
 {style="table-layout:auto"}
 
