--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -6,9 +6,9 @@ last-update: May 2023
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5457'
-ht-degree: 92%
+ht-degree: 100%
 
 ---
 
@@ -124,7 +124,7 @@ ht-degree: 92%
 
 * 已更新「說明」選單，現包含 Experience League 教學影片、產品文件和同業貼文的搜尋結果。 您可在 Experience League 中檢視結果。
 
-如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象])。
+如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象])。
 
 +++
 
@@ -172,14 +172,14 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 發行日期：**2023 年 5 月 10 日**
 
-* [!DNL Analytics] [發行說明](https://experienceleague.adobe.com/docs/analytics/release-notes/latest.html?lang=zh-Hant)
+* [!DNL Analytics] [發行說明](https://experienceleague.adobe.com/docs/analytics/release-notes/latest.html)
 * [!DNL Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/analytics.html)
 
 ### AppMeasurement {#appm}
 
 發行版本：**2.23.0**
 
-* [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=zh-Hant)
+* [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html)
 
 ### 新 [!DNL Analytics] 教學課程和其他課程 {#tutorials-analytics}
 
@@ -187,7 +187,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 | 日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 隨選 | [只需點按幾下即可啟動並執行資料收集和事件轉送！](https://experienceleague.adobe.com/docs/experience-league-live-events/events/episodes/exl-live-episode-4-25-23.html?lang=zh-Hant) | 影片活動 - Experience League Live | 如果您是 Adobe 現代資料收集工具的新手並且對深入了解感到緊張，您現在可以比以往更快地啟動並執行基本安裝，包括將事件資料傳送到伺服器端的 Meta。只需點按幾下，Adobe 的資料收集快速啟動工作流程就可以在後端完成多項設定，以節省您的時間並確保您的設定正確無誤。 |
+| 隨選 | [只需點按幾下即可啟動並執行資料收集和事件轉送！](https://experienceleague.adobe.com/docs/experience-league-live-events/events/episodes/exl-live-episode-4-25-23.html) | 影片活動 - Experience League Live | 如果您是 Adobe 現代資料收集工具的新手並且對深入了解感到緊張，您現在可以比以往更快地啟動並執行基本安裝，包括將事件資料傳送到伺服器端的 Meta。只需點按幾下，Adobe 的資料收集快速啟動工作流程就可以在後端完成多項設定，以節省您的時間並確保您的設定正確無誤。 |
 
 {style="table-layout:auto"}
 
@@ -201,7 +201,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 發行日期：**2023 年 5 月 10 日**
 
-* Customer Journey Analytics [發行說明](https://experienceleague.adobe.com/docs/analytics-platform/using/releases/latest.html?lang=zh-Hant)
+* Customer Journey Analytics [發行說明](https://experienceleague.adobe.com/docs/analytics-platform/using/releases/latest.html)
 * Customer Journey Analytics [產品文件與教學課程](https://experienceleague.adobe.com/docs/customer-journey-analytics.html)
 
 ### 新的 Customer Journey Analytics 教學課程和其他課程 {#tutorials-cja}
@@ -224,7 +224,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 發行日期：**2023 年 5 月 10 日**
 
 * [!DNL Streaming Media Analytics] [發行說明](https://experienceleague.adobe.com/docs/media-analytics/using/release-notes/release-notes.html)
-* [!DNL Streaming Media Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html?lang=zh-Hant)
+* [!DNL Streaming Media Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html)
 
 ## ![圖示](/assets/audience-manager.png) Audience Manager {#aam}
 
@@ -238,10 +238,10 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 4 月 | [錯誤：_由於已啟用區段共用，不允許刪除_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21790.html?lang=zh-Hant) | 新文章 | 了解如何解決「_由於已啟用區段共用，不允許刪除_」錯誤。 |
-| 2023 年 4 月 | [未預期的 AAM UI 存取權](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21831.html?lang=zh-Hant) | 新文章 | 了解如何解決使用者有 AAM UI 存取權但沒有特定 AAM 權限的問題。 |
-| 2023 年 4 月 | [大量匯出選項](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21861.html?lang=zh-Hant) | 新文章 | 了解如何從 [!DNL Audience Manager] 大量匯出資料。 |
-| 2023 年 4 月 | [LiveRamp 伺服器對伺服器目的地](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21926.html?lang=zh-Hant) | 新文章 | 本文概述了 [!DNL Audience Manager] 中的 [!UICONTROL LiveRamp] 目的地。 |
+| 2023 年 4 月 | [錯誤：_由於已啟用區段共用，不允許刪除_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21790.html) | 新文章 | 了解如何解決「_由於已啟用區段共用，不允許刪除_」錯誤。 |
+| 2023 年 4 月 | [未預期的 AAM UI 存取權](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21831.html) | 新文章 | 了解如何解決使用者有 AAM UI 存取權但沒有特定 AAM 權限的問題。 |
+| 2023 年 4 月 | [大量匯出選項](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21861.html) | 新文章 | 了解如何從 [!DNL Audience Manager] 大量匯出資料。 |
+| 2023 年 4 月 | [LiveRamp 伺服器對伺服器目的地](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21926.html) | 新文章 | 本文概述了 [!DNL Audience Manager] 中的 [!UICONTROL LiveRamp] 目的地。 |
 
 {style="table-layout:auto"}
 
@@ -279,10 +279,10 @@ _新功能_
 _新功能_
 
 * 為 Dynamic Media 影片傳遞 (啟用 CMAF) 中的自適應串流推出的新通訊協定 (DASH - 基於 HTTP 的動態自適應串流) 支援：
-   * 自適應串流 (DASH/HLS) 可確保更好的一般使用者觀看影片體驗.
+   * 自適應串流 (DASH/HLS) 可確保更好的一般使用者觀看影片體驗。
    * DASH 是自適應影片串流的國際標準通訊協定，在業界被廣泛採用。
    * 在亞太和北美地區有提供；[由支援票證啟用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/video.html#enable-dash)。歐洲、中東和非洲地區即將提供。
-* 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖和自訂轉譯。這些檔案現在也支援智慧標記和智慧型裁切功能。
+* 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖和自訂轉譯。這些檔案現在也支援智慧型標記和智慧型裁切功能。
 
 ### [!DNL Experience Manager Forms] as a [!DNL Cloud Service]
 
@@ -354,9 +354,9 @@ _已知問題_
 * [Experience Manager Cloud Manager 發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/release-notes/current.html)
 * [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/docs/aem-forms-automated-conversion-service/using/release-notes.html)
 * [Experience Manager 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/release-notes.html)
-* [Experience Manager 6.4 Cumulative Fix Pack 發行說明](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html?lang=zh-Hant)
+* [Experience Manager 6.4 Cumulative Fix Pack 發行說明](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html)
 * [Experience Manager Assets Dynamic Media 發行說明](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/release-notes/s7rn2017.html)
-* [Experience Manager Brand Portal 發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
+* [Experience Manager Brand Portal 發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html)
 * [Experience Manager 桌面應用程式發行說明](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html)
 * [Experience Manager Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html)
 * [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)
@@ -384,11 +384,11 @@ _已知問題_
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 4 月 | [對處理 Null 值的 GraphQL 所做的變更](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21792.html?lang=zh-Hant) | 新文章 | 了解如何解決近期對 GraphQL 實作的改進所造成的應用程式程式碼可能出現的非預期行為 (在 [!DNL Experience Manager as a Cloud Service] 中)。 |
-| 2023 年 4 月 | [在轉出內部 Live Copy 期間未更新參考](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21808.html?lang=zh-Hant) | 新文章 | 了解如何解決在轉出內部 Live Copy 期間未更新參考的問題。 |
-| 2023 年 4 月 | [將資產資料夾拖放到 AEM Assets Web UI 失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21865.html?lang=zh-Hant) | 新文章 | 找出將資產資料夾拖放到 AEM Assets Web UI 失敗的這個問題解決方法。 |
-| 2023 年 4 月 | [列出使用[!UICONTROL 查詢產生器] API 發佈的頁面](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21884.html?lang=zh-Hant) | 新文章 | 了解如何列出在 AEM 作者上發佈的頁面。 |
-| 2023 年 4 月 | [如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21885.html?lang=zh-Hant) | 新文章 | 如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式。 |
+| 2023 年 4 月 | [對處理 Null 值的 GraphQL 所做的變更](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21792.html) | 新文章 | 了解如何解決近期對 GraphQL 實作的改進所造成的應用程式程式碼可能出現的非預期行為 (在 [!DNL Experience Manager as a Cloud Service] 中)。 |
+| 2023 年 4 月 | [在轉出內部 Live Copy 期間未更新參考](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21808.html) | 新文章 | 了解如何解決在轉出內部 Live Copy 期間未更新參考的問題。 |
+| 2023 年 4 月 | [將資產資料夾拖放到 AEM Assets Web UI 失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21865.html) | 新文章 | 找出將資產資料夾拖放到 AEM Assets Web UI 失敗的這個問題解決方法。 |
+| 2023 年 4 月 | [列出使用[!UICONTROL 查詢產生器] API 發佈的頁面](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21884.html) | 新文章 | 了解如何列出在 AEM 作者上發佈的頁面。 |
+| 2023 年 4 月 | [如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21885.html) | 新文章 | 如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式。 |
 
 {style="table-layout:auto"}
 
@@ -398,7 +398,7 @@ _已知問題_
 * [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html)
 * [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html)
 * [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
-* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#previous-updates)
+* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#先前版本更新)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html#aem-as-a-cloud-service)
 
@@ -495,9 +495,9 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2023 年 4 月 | [從值超過 255 個字元的外部資料庫中擷取資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21880.html?lang=zh-Hant) | 新文章 | 了解如何從值超過 255 個字元的外部資料庫中擷取資料。 |
-| 2023 年 4 月 | [錯誤：_[!DNL Google BigQuery]外部帳戶中的 XSV-350064_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21895.html?lang=zh-Hant) | 新文章 | 了解如何修正&#x200B;_[!DNL Google BigQuery] 外部帳戶中的 XSV-350064_ 錯誤。 |
-| 2023 年 4 月 | [組建 9356：升級後外部連結仍在  [!DNL Internet Explorer]  開啟](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21907.html?lang=zh-Hant) | 新文章 | 了解如何解決升級到 9356 後，外部連結仍導向 [!DNL Internet Explorer] 而不是 [!DNL Microsoft Edge]。 |
+| 2023 年 4 月 | [從值超過 255 個字元的外部資料庫中擷取資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21880.html) | 新文章 | 了解如何從值超過 255 個字元的外部資料庫中擷取資料。 |
+| 2023 年 4 月 | [錯誤：_[!DNL Google BigQuery]外部帳戶中的 XSV-350064_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21895.html) | 新文章 | 了解如何修正&#x200B;_[!DNL Google BigQuery] 外部帳戶中的 XSV-350064_ 錯誤。 |
+| 2023 年 4 月 | [組建 9356：升級後外部連結仍在  [!DNL Internet Explorer]  開啟](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21907.html) | 新文章 | 了解如何解決升級到 9356 後，外部連結仍導向 [!DNL Internet Explorer] 而不是 [!DNL Microsoft Edge]。 |
 
 {style="table-layout:auto"}
 
@@ -506,7 +506,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html)
 * [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html)
 * [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html)
-* [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
+* [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html)
 
 +++
 
@@ -527,7 +527,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 5 月 | [製作網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/author-a-web-campaign.html) | 影片 | 學習如何在 [!DNL Journey Optimizer] 行銷活動中使用網頁視覺編輯器創造網路體驗。 |
-| 2023 年 5 月 | [建立網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/create-a-web-campaign.html?lang=zh-Hant) | 影片 | 了解網路行銷活動是什麼。 了解如何設定網路行銷活動屬性、檢閱及發佈。 |
+| 2023 年 5 月 | [建立網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/create-a-web-campaign.html) | 影片 | 了解網路行銷活動是什麼。 了解如何設定網路行銷活動屬性、檢閱及發佈。 |
 | 2023 年 5 月 | [將資料集匯出至雲端儲存空間位置](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/data-management/export-datasets.html) | 影片 | 學習如何將資料集從 [!DNL Journey Optimizer] 匯出至 [!DNL Amazon] S3 目的地。 |
 
 {style="table-layout:auto"}
@@ -633,7 +633,7 @@ Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 4 月 | [無法編輯自訂欄位](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21913.html?lang=zh-Hant) | 新文章 | 了解如何解決使用者在編輯自訂欄位時遇到的問題。 |
+| 2023 年 4 月 | [無法編輯自訂欄位](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21913.html) | 新文章 | 了解如何解決使用者在編輯自訂欄位時遇到的問題。 |
 
 {style="table-layout:auto"}
 
